"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2008-01-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-17:
	  Fixed unset_node() to apply correct delay on X nodes.
	  Still stuck on X error, not yet reproduced, worked around
		using 'unsetall' command.  (GAG)


2007-12-31	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-16:
	  prsim: check for weak-rules that are pulling as strong rules
		are turned off, which fixes many cases of nodes being
		stuck with weak-pulls on (inconsistency).
		New test case added.
		Opinion: wake up event processing needs to be completely
			re-written with weak rule model.


2007-12-30	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-15:
	  Weak vs. non-weak rules in the pending queue are now handled
		"more properly", pending weak-rules overpowered by normal
		rules are simply killed and replaced, and underpowered
		new weak firings are merely dropped.
		This fixes some long-standing problems (on this branch)
		of events 'hanging' on pulling rules (requiring 'unset'
		or 'unsetall' to trigger forced re-evaluation)
	  Several new test cases added using SRAM like cell.  


2007-12-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-14:
	  Interference checking now distinguishes between weak rule flavors.
		Only applicable when both strong up/dn rules are off. 
		Results in fixing some expect-fail test cases.
	  More explicit typing and conversions of node_type and expr_type's
		pull_enum.  Seems more clear now.
	

2007-12-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-13:
	  sim/prsim/Expr.h: pul_enum made a true enum, not uchar typedef.